--- a/Sratch/pom.xml
+++ b/Sratch/pom.xml
@@ -19,6 +19,11 @@
   		<artifactId>jmock-junit4</artifactId>
   		<version>2.5.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-lang3</artifactId>
+  		<version>3.0.1</version>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
