--- a/Sratch/pom.xml
+++ b/Sratch/pom.xml
@@ -24,6 +24,11 @@
   		<artifactId>commons-lang3</artifactId>
   		<version>3.0.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.guava</groupId>
+  		<artifactId>guava</artifactId>
+  		<version>10.0.1</version>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
