--- a/Sratch/pom.xml
+++ b/Sratch/pom.xml
@@ -29,6 +29,16 @@
   		<artifactId>guava</artifactId>
   		<version>10.0.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject</groupId>
+  		<artifactId>guice</artifactId>
+  		<version>3.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.guiceberry</groupId>
+  		<artifactId>guiceberry</artifactId>
+  		<version>3.1.0</version>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
