--- a/Sratch/pom.xml
+++ b/Sratch/pom.xml
@@ -39,6 +39,11 @@
   		<artifactId>guiceberry</artifactId>
   		<version>3.1.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject.extensions</groupId>
+  		<artifactId>guice-assistedinject</artifactId>
+  		<version>3.0</version>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
