--- a/Sratch/pom.xml
+++ b/Sratch/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>guice-assistedinject</artifactId>
 			<version>3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
