--- a/Sratch/pom.xml
+++ b/Sratch/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
+		<dependency>
+			<groupId>jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.13</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
